--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 <body>
     <main>
-        <div></div>
+        <img id="pokemon" src="img/charizard.gif" alt="pokemon">
+        <img id="pokedex" src="img/pokedex.png" alt="">
+        <div id="buttons">
+            <button id="next">&lt;Prev</button>
+            <button id="prev">Next&gt;</button>
+        </div>
+        <h1 id="titulo">
+            <span id="numero">6</span> -
+            <span id="nome">charizard</span>
+        </h1>
+        <form>
+            <input type="search" id="barra-pesquisa" placeholder="Name or Number" required>
+        </form>
     </main>
 </body>
 </html>
