--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <img id="pokemon" src="" alt="pokemon">
         <img id="pokedex" src="img/pokedex.png" alt="">
         <div id="buttons">
-            <button id="next">&lt;Prev</button>
-            <button id="prev">Next&gt;</button>
+            <button id="prev">&lt;Prev</button>
+            <button id="next">Next&gt;</button>
         </div>
         <h1 id="titulo">
             <span id="numero"></span> -
             <span id="nome"></span>
         </h1>
-        <form>
+        <form id="form">
             <input type="search" id="barra-pesquisa" placeholder="Name or Number" required>
         </form>
     </main>
